fixed some minor CSS so it looks better on mobile view

--- a/styles/form.css
+++ b/styles/form.css
@@ -55,12 +55,13 @@ fieldset {
 }
 
 .wf1 input[type="text"],
-.wf1 input[type="date"],
+#date,
+/* .wf1 input[type="date"], */
 .wf1 select,
-.wf1 textarea {
+#textarea {
   background-color: #fff;
   border: 1px solid #999;
-  border-radius: none;
+  border-radius: 0;
   padding: .75rem;
   color: #555;
   width: 100%;
@@ -84,6 +85,9 @@ label input[type="checkbox"] {
   font-size: 1rem;
   font-weight: bold;
   width: 100%;
+  background-color: #eee;
+  border: 1px solid rgba(0,0,0,0.2);
+  border-radius: 0;
 }
 
 /* --------- Review Stars ---------- */
